feat: add production deployment guide and integrate Cloudinary and Glitchtip
- Introduce a comprehensive deployment guide in DEPLOYMENT.md with environment variable setup and instructions.
- Update requirements.txt to include Cloudinary and Glitchtip dependencies.
- Refactor models to utilize Cloudinary for image storage and optimization in CustomUser, Category, and ProductImage models.
- Implement optimized image URL retrieval methods for better performance.
- Replace Bugsnag with Glitchtip for error tracking in templates and settings.
- Configure Redis for caching and session management.
- Enhance security and performance settings in production environment.

--- a/requirements.txt
+++ b/requirements.txt
@@ -66,9 +66,11 @@ urllib3==2.3.0
 virtualenv==20.29.1
 whitenoise==6.6.0
 zipp==3.21.0
-django-redis==5.4.0
-redis==5.0.1
-bugsnag==4.6.1
-Pillow==10.2.0
-beautifulsoup4==4.12.3
-htmlmin==0.1.12
+django-redis
+redis
+django-cloudinary-storage
+cloudinary
+sentry-sdk[django]
+Pillow
+beautifulsoup4
+htmlmin
