feat: enhance production setup and performance monitoring
- Update DEPLOYMENT.md to include detailed instructions for high-traffic production setup, including server requirements, database, Redis, and CloudFlare CDN configuration.
- Implement rate limiting middleware to manage API and login request rates, improving security and performance.
- Add health check and status check endpoints for system monitoring, providing insights into database and Redis health.
- Refactor product views to optimize database queries and improve performance with select_related and prefetch_related.
- Update requirements.txt to include new dependencies for rate limiting, health checks, and performance monitoring.
- Enhance base template with performance monitoring scripts and improved error logging for JavaScript.
- Update robots.txt to allow crawling of health and status endpoints, and add additional sitemap entries for better SEO.

--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,7 @@ railway==0.0.4
 RapidFuzz==3.11.0
 requests==2.32.3
 requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
+requests-toolbelt
 shellingham==1.5.4
 sqlparse==0.5.3
 tomli==2.2.1
@@ -74,3 +74,15 @@ sentry-sdk[django]
 Pillow
 beautifulsoup4
 htmlmin
+django-ratelimit
+celery
+django-cacheops
+django-debug-toolbar
+django-extensions
+django-health-check
+django-cors-headers
+django-storages
+boto3
+psycopg2-binary
+gunicorn
+whitenoise
