chore: add migration for category is_active field

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,9 @@ venv/
 .env
 
 # Django migrations
-*/migrations/*
+!*/migrations/
+!*/migrations/*.py
+!*/migrations/*.pyc
 
 # IDE specific
 .vscode/
